--- a/app/views/prototypes/peter/highest-subject.html
+++ b/app/views/prototypes/peter/highest-subject.html
@@ -37,15 +37,34 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is the highest qualification they’ve achieved in their main subject?
+        What is the highest level of qualification they teach?
 
       </h1>
     </legend><br>
-
-    <p>Tell us about the subject they teach the most in a standard working week.
-    </p>
     
     <div class="govuk-radios">
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Entry level
+        </label>
+        <!--<span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          A Levels/OCR nationals
+        </span>-->
+      </div>
+
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 1
+        </label>
+        <!--<span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          A Levels/OCR nationals
+        </span>-->
+      </div>
+
       
       
       <div class="govuk-radios__item">
