--- a/app/views/prototypes/peter/qualification-type.html
+++ b/app/views/prototypes/peter/qualification-type.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What qualification or programmes do they teach?
+        What qualifications or programmes do they teach?
       </h1>
     </legend>
   
@@ -91,7 +91,7 @@
   </div><br><br>
 
 
-          <a href="subject-vocational" class="govuk-button show-continue" style="display: inline;">
+          <a href="subject-new" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
