--- a/app/views/prototypes/peter/highest-subject.html
+++ b/app/views/prototypes/peter/highest-subject.html
@@ -164,7 +164,7 @@
 <br>
 
 
-          <a href="maths" class="govuk-button show-continue" style="display: inline;">
+          <a href="highest-subject2" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
