--- a/app/views/prototypes/peter/explain-how-long.html
+++ b/app/views/prototypes/peter/explain-how-long.html
@@ -44,7 +44,45 @@
             
             <br><br>
 
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English</h2>
+            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 4</h2>
+            <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
+                      </legend>
+
+
+                      <div class="govuk-radios">
+                        <div class="govuk-radios__item">
+                          <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
+                          <label class="govuk-label govuk-radios__label" for="teachers">
+                            Less than one month
+                          </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                          <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
+                          <label class="govuk-label govuk-radios__label" for="teachers-2">
+                            2 to 3 months
+                          </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                          <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
+                          <label class="govuk-label govuk-radios__label" for="teachers-3">
+                            4 to 5 months
+                          </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                          <input class="govuk-radios__input" id="teachers-4" name="teachers" type="radio" value="over">
+                          <label class="govuk-label govuk-radios__label" for="teachers-4">
+                            Over 6 months
+                          </label>
+                        </div>
+                      </div>
+                  
+                    </fieldset>
+                  </div>
+                     <br><br>
+
+                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 5</h2>
             <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
                       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
@@ -84,7 +122,7 @@
 
            
 
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Maths</h2><br>
+            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Business Administration - Level 3</h2><br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
