--- a/app/views/prototypes/peter/subject-new.html
+++ b/app/views/prototypes/peter/subject-new.html
@@ -44,14 +44,14 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                    ancient languages
+                    Ancient languages
 
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    archaeology
+                    Archaeology
 
                   </label>
                 </div>
@@ -73,6 +73,23 @@
                   <input class="govuk-radios__input" id="where-do-you-live-6" name="where-do-you-live" type="radio" value="abroad">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-6">
                     Accounting, business and economics
+                  </label>
+                </div>
+
+
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                    Biology
+
+                  </label>
+                </div>
+
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                    Chemistry
+
                   </label>
                 </div>
 
@@ -210,13 +227,7 @@ English
                   </label>
                 </div>
 
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Psychology
-            
-                  </label>
-                </div>
+                
 
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
@@ -225,10 +236,25 @@ English
             
                   </label>
                 </div>
+
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                    Physics
+                  </label>
+                </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
                     Politics
+                  </label>
+                </div>
+
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                    Psychology
+            
                   </label>
                 </div>
 
@@ -250,30 +276,7 @@ English
                 </div>
 
 
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Biology
-
-                  </label>
-                </div>
-
-
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Chemistry
-
-                  </label>
-                </div>
-
-
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Physics
-                  </label>
-                </div>
+                
 
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
